--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -7,11 +7,11 @@
       <div class='col-md-2'>Filter by:</div>
       <div class='col-md-4'>
         <input type='text'
-            [(ngModel)]='listFilter'   />
+            [(ngModel)]= 'listFilter'   />
       </div>
     </div>
     <div class='row'
-         *ngIf='listFilter'>
+         *ngIf=  'listFilter' >
       <div class='col-md-6'>
         <h4>Filtered by: {{listFilter}} </h4>
       </div>
@@ -45,8 +45,12 @@
                     [style.margin.px]='imageMargin'
                     >
               </td>
-              <td>{{ product.productName }}</td>
-              <td>{{product.productCode | lowercase | convertToSpaces: '-' }}</td>
+              <td>
+                  <a [routerLink]="['/products', product.productId]">
+                    {{ product.productName }}
+                  </a>
+              </td>
+              <td>{{ product.productCode | lowercase | convertToSpaces: '-' }}</td>
               <td>{{ product.releaseDate }}</td>
               <td>{{ product.price | currency : 'USD' : 'symbol' : '1.2-2' }}</td>
               <td><pm-star [rating]='product.starRating'
